--- a/RoomBookingApp/templates/room_list.html
+++ b/RoomBookingApp/templates/room_list.html
@@ -5,6 +5,7 @@
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-3">
     <h2>Rooms</h2>
+    <a href="{% url 'check_availability' %}" class="btn btn-primary">Available Rooms</a>
     <a href="{% url 'room_create' %}" class="btn btn-primary">Add Room</a>
 </div>
 <table class="table table-bordered">
@@ -21,7 +22,7 @@
         <tr>
             <td>{{ room.room_number }}</td>
             <td>{{ room.room_type }}</td>
-            <td>${{ room.price }}</td>
+            <td>{{ room.price }}=/ Tsh</td>
             <td>
                 <a href="{% url 'room_update' room.pk %}" title="Edit" style="color: #ffc107;"><i class="fas fa-edit"></i></a>
                 <a href="{% url 'room_delete' room.pk %}" title="Delete" style="color: #dc3545;"><i class="fas fa-trash-alt"></i></a>                
