changes in food, drinks, rooms, carousels slides and footer

--- a/RoomBookingApp/templates/room_list.html
+++ b/RoomBookingApp/templates/room_list.html
@@ -20,7 +20,7 @@
     <tbody>
         {% for room in rooms %}
         <tr>
-            <td>{{ room.room_number }}</td>
+            <td>{{ room.room_number }} ROOM</td>
             <td>{{ room.room_type }}</td>
             <td>{{ room.price }}=/ Tsh</td>
             <td>
