--- a/RoomBookingApp/templates/room_availability_results.html
+++ b/RoomBookingApp/templates/room_availability_results.html
@@ -22,10 +22,11 @@
         <div class="col-md-3 mb-3">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">{{ room.room_number }}</h5>
+                    <h5 class="card-title">ROOM {{ room.room_number }}</h5>
                     <p class="card-text">Type: {{ room.room_type }}</p>
                     <p class="card-text">Price: {{ room.price }}</p>
                     <a href="{% url 'book_room' room.id %}" class="btn btn-primary">Book Now</a>
+                    <a href="#" class="btn btn-primary">Packages</a>
                 </div>
             </div>
         </div>
@@ -35,7 +36,7 @@
         <div class="col-md-3 mb-3">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">{{ room.room_number }}</h5>
+                    <h5 class="card-title">ROOM {{ room.room_number }}</h5>
                     <p class="card-text">Type: {{ room.room_type }}</p>
                     <p class="card-text">Price: {{ room.price }}</p>
                     <p class="card-text unavailable btn btn-danger">Unavailable</p>
